--- a/SimpleCalculator/SimpleCalculator.csproj
+++ b/SimpleCalculator/SimpleCalculator.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Add.cs" />
+    <Compile Include="Opperations\AddNumber.cs" />
+    <Compile Include="Opperations\DivideNumber.cs" />
     <Compile Include="Integer.cs" />
+    <Compile Include="Opperations\MultiplyNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Opperations\SubtractNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
