--- a/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -52,11 +52,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AddTest.cs" />
-    <Compile Include="DivideTest.cs" />
-    <Compile Include="MultiTest.cs" />
+    <Compile Include="Operations.Tests\AddTest.cs" />
+    <Compile Include="Operations.Tests\DivideTest.cs" />
+    <Compile Include="Operations.Tests\MultiTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubTest.cs" />
+    <Compile Include="Operations.Tests\SubTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj">
