--- a/SimpleCalculator/SimpleCalculator.csproj
+++ b/SimpleCalculator/SimpleCalculator.csproj
@@ -43,14 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Opperations\AddNumber.cs" />
-    <Compile Include="Opperations\DivideNumber.cs" />
+    <Compile Include="Operations\AddNumber.cs" />
+    <Compile Include="Operations\DivideNumber.cs" />
     <Compile Include="Integer.cs" />
-    <Compile Include="Opperations\MultiplyNumber.cs" />
-    <Compile Include="Math\Operators.cs" />
+    <Compile Include="Operations\MultiplyNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Opperations\SubtractNumber.cs" />
+    <Compile Include="Operations\SubtractNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
