--- a/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CalculatorTests.cs" />
+    <Compile Include="ExpressionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
