added constant class

--- a/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackTests.cs" />
+    <Compile Include="ContantsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj">
